samples/_failures_safe/1761150212_1a9a70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26821750.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_26821750.c:187:24: error: expected declaration or statement at end of input
  187 |                 struct GraphNode* neighbor = graph->edges[i]->target;
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_26821750.c:187:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26821750.c:187:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26821750.c:187:24: error: expected declaration or statement at end of input
